--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <div id="menu_list">
-        <a href="#" class="cs_bar">
+        <div class="cs_bar">
             <i class="fas fa-bars"></i>
-        </a>
+        </div>
         <div class="hamburger-menu">
             <ul>
                 <li>
@@ -51,9 +51,9 @@
                     <a href="#cocktail">Cocktail</a>
                 </li>
             </ul>
-            <a href="#" class="close">
+            <div href="#" class="close">
                 <i class="fas fa-times"></i>
-            </a>
+            </div>
         </div>
     </div>
 
