index+style+script: miglioramenti

--- a/index.html
+++ b/index.html
@@ -21,34 +21,34 @@
         <div class="hamburger-menu">
             <ul>
                 <li>
-                    <a href="#starters">Starters</a>
+                    <a href="#starters" class="cs_menu_item">Starters</a>
                 </li>
                 <li>
-                    <a href="#braciole">Braciole</a>
+                    <a href="#braciole" class="cs_menu_item">Braciole</a>
                 </li>
                 <li>
-                    <a href="#primi">Primi</a>
+                    <a href="#primi" class="cs_menu_item">Primi</a>
                 </li>
                 <li>
-                    <a href="#pinse">Pinse</a>
+                    <a href="#pinse" class="cs_menu_item">Pinse</a>
                 </li>
                 <li>
-                    <a href="#percorsi">Percorsi</a>
+                    <a href="#percorsi" class="cs_menu_item">Percorsi</a>
                 </li>
                 <li>
-                    <a href="#degustazioni">Degustazioni</a>
+                    <a href="#degustazioni" class="cs_menu_item">Degustazioni</a>
                 </li>
                 <li>
-                    <a href="#bevande">Bevande</a>
+                    <a href="#bevande" class="cs_menu_item">Bevande</a>
                 </li>
                 <li>
-                    <a href="#birre">Birre</a>
+                    <a href="#birre" class="cs_menu_item">Birre</a>
                 </li>
                 <li>
-                    <a href="#birrespina">Birre Alla Spina</a>
+                    <a href="#birrespina" class="cs_menu_item">Birre Alla Spina</a>
                 </li>
                 <li>
-                    <a href="#cocktail">Cocktail</a>
+                    <a href="#cocktail" class="cs_menu_item">Cocktail</a>
                 </li>
             </ul>
             <div href="#" class="close">
