--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div id="cs_first">
-        <div class="img_wrapper">
+        <div class="img_wrapper col-6">
             <img src="img/logo.png" alt="oblio logo">
         </div>
         <h1>Men&uacute;</h1>
