--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <h1 class="text-uppercase cs_text_grey mb-3">Braciole</h1>
             <div class="row g-2">
                 <div class="col-10">
-                    <p>Tradizionali</p> 
+                    <p>Alle mandorle</p> 
                  </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_grey cs_price cs_font_2">10</p>
@@ -231,7 +231,7 @@
                     <p class="cs_text_red cs_price cs_font_2">12</p>
                 </div>
                 <div class="col-10">
-                    <p>Tonnarelli cacio e pepe</p> 
+                    <p>Gnocchi speck e rucola</p> 
                 </div>
                     <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">12</p>
