--- a/index.html
+++ b/index.html
@@ -535,6 +535,12 @@
                     <div class="col-6 text-end align-self-end">
                         <p class="cs_price cs_font_2 cs_text_grey">17</p>
                     </div>
+                     <div class="col-6">
+                        <p>Frappato</p>
+                    </div>
+                    <div class="col-6 text-end align-self-end">
+                        <p class="cs_price cs_font_2 cs_text_grey">17</p>
+                    </div>
                     <div class="col-6">
                         <p>Grillo</p>
                     </div>
@@ -560,7 +566,7 @@
                         <p class="cs_price cs_font_2 cs_text_grey">20</p>
                     </div>
                     <div class="col-6">
-                        <p>Inmezzo</p>
+                        <p>Grillo Peloro Casematte</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
                         <p class="cs_price cs_font_2 cs_text_grey">20</p>
