--- a/index.html
+++ b/index.html
@@ -248,6 +248,18 @@
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">12</p>
                 </div>
+                <div class="col-10">
+                    <p>Spaghetti alla bottarga</p> 
+                </div>
+                <div class="col-2 text-end align-self-end">
+                    <p class="cs_text_red cs_price cs_font_2">15</p>
+                </div>
+                <div class="col-10">
+                    <p>RSpaghetti con ricci</p> 
+                </div>
+                <div class="col-2 text-end align-self-end">
+                    <p class="cs_text_red cs_price cs_font_2">12</p>
+                </div>
             </div>
         </div>
     </section>
@@ -363,19 +375,19 @@
                         <p>Coca Cola</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">2</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">2.50</p>
                     </div>
                     <div class="col-6">
                         <p>Fanta</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">2</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">2.50</p>
                     </div>
                     <div class="col-6">
                         <p>Sprite</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">2</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">2.50</p>
                     </div>
                     <div class="col-6">
                         <p>Chinotto</p>
@@ -387,13 +399,13 @@
                         <p>Schweppes</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">2</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">2.50</p>
                     </div>
                     <div class="col-6">
                         <p>Red Bull</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">2</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">3</p>
                     </div>
                 </div>
             </div>
@@ -614,7 +626,7 @@
                     <p>Selezione di cocktail basic</p>
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">6</p>
+                    <p class="cs_text_red cs_price cs_font_2">7</p>
                 </div>
                 <div class="col-10">
                     <p class="m-0">Selezione di cocktail premium</p>
@@ -642,6 +654,36 @@
                     </div>
                     <div class="col-12">
                         <p>Bulldog</p>
+                    </div>
+                    <div class="col-12">
+                        <p>Etna</p>
+                    </div>
+                    <div class="col-12">
+                        <p>Gold</p>
+                    </div>
+                    <div class="col-12">
+                        <p>Bombay</p>
+                    </div>
+                    <div class="col-12">
+                        <p>Acqueverdi</p>
+                    </div>
+                    <div class="col-12">
+                        <p>Sabatini</p>
+                    </div>
+                    <div class="col-12">
+                        <p>CiauruGin</p>
+                    </div>
+                    <div class="col-12">
+                        <p>Gin Roku</p>
+                    </div>
+                    <div class="col-12">
+                        <p>Silent Pool</p>
+                    </div>
+                    <div class="col-12">
+                        <p>Panarea</p>
+                    </div>
+                    <div class="col-12">
+                        <p>Brockmans</p>
                     </div>
                 </div>
             </div>
