--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <p class="cs_text_red cs_price cs_font_2">15</p>
                 </div>
                 <div class="col-10">
-                    <p>RSpaghetti con ricci</p> 
+                    <p>Spaghetti con ricci</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">12</p>
@@ -594,6 +594,12 @@
                     </div>
                     <div class="col-6 text-end align-self-end">
                         <p class="cs_price cs_font_2 cs_text_grey">22</p>
+                    </div>
+                    <div class="col-6">
+                        <p>Berlucchi - Franciacorta</p>
+                    </div>
+                    <div class="col-6 text-end align-self-end">
+                        <p class="cs_price cs_font_2 cs_text_grey">30</p>
                     </div>
                     <div class="col-6">
                         <p>Champagne Mo&euml;t</p>
