--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <p class="cs_text_red cs_price cs_font_2">12</p>
                 </div>
                 <div class="col-10">
-                   <p>Paccheri rucola, gamberi di mazzara e arancia</p> 
+                   <p>Paccheri rucola, gamberi e arancia</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">15</p>
@@ -258,7 +258,7 @@
                     <p>Spaghetti con ricci</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">12</p>
+                    <p class="cs_text_red cs_price cs_font_2">20</p>
                 </div>
             </div>
         </div>
@@ -278,13 +278,13 @@
                     <p>Funghi freschi, burrata, rucola, pomodorini e noci</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_grey cs_price cs_font_2">8</p>
+                    <p class="cs_text_grey cs_price cs_font_2">10</p>
                 </div>
                 <div class="col-10">
                     <p>Tuma, scarola, pomodoro e acciughe</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_grey cs_price cs_font_2">8</p>
+                    <p class="cs_text_grey cs_price cs_font_2">10</p>
                 </div>
             </div>
         </div>
@@ -627,6 +627,7 @@
     <section id="cocktail">
         <div class="container">
             <h1 class="text-uppercase mb-3 text-center title">Cocktail</h1>
+            <p class="cs_description">(durante gli eventi il costo di tutti i cocktail sarà di 10&#8364;)</p>
             <div class="row g-2">
                 <div class="col-10">
                     <p>Selezione di cocktail basic</p>
