--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p>Arrosticini (5pz)</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">5</p>
+                    <p class="cs_text_red cs_price cs_font_2">6</p>
                 </div>
                 <div class="col-10">
                     <p>Patate con pistacchio e guanciale</p> 
@@ -90,7 +90,13 @@
                     <p>Patate Fritte</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">3</p>
+                    <p class="cs_text_red cs_price cs_font_2">3.50</p>
+                </div>
+                <div class="col-10">
+                    <p>Misto Fritto</p> 
+                </div>
+                <div class="col-2 text-end align-self-end">
+                    <p class="cs_text_red cs_price cs_font_2">6</p>
                 </div>
                 <div class="col-10">
                     <p class="m-0">Fritto premium</p> 
@@ -210,6 +216,13 @@
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_grey cs_price cs_font_2">7</p>
                 </div>
+                <div class="col-10">
+                    <p>Hamburger di scottona (180g)</p> 
+                    <p class="cs_description">(con patate al forno)</p>
+                </div>
+                <div class="col-2 text-end align-self-end">
+                    <p class="cs_text_grey cs_price cs_font_2">12</p>
+                </div>
             </div>
         </div>
     </section>
@@ -298,7 +311,7 @@
                     <p>Degustazione braciole</p>
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">20</p>
+                    <p class="cs_text_red cs_price cs_font_2">24</p>
                 </div>
                 <div class="col-10">
                     <p class="m-0">Medici</p> 
@@ -332,7 +345,7 @@
             <div class="row g-2">
                 <div class="col-10">
                     <p class="text-uppercase m-0">Tagliere tipico</p> 
-                    <p class="cs_description">(selezione di carne, salumi e formaggi)</p>
+                    <p class="cs_description">(selezione di salumi e formaggi)</p>
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">20</p>
@@ -345,16 +358,18 @@
                     <p class="cs_text_red cs_price cs_font_2">20</p>
                 </div>
                 <div class="col-10">
-                    <p class="text-uppercase">Tagliere senza glutine</p> 
+                    <p class="text-uppercase">Aperifish</p> 
+                    <p class="cs_description">(anelli di calamari, franceschini, latterino, gamberi)</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">24</p>
+                    <p class="cs_text_red cs_price cs_font_2">40</p>
                 </div>
                 <div class="col-10">
-                    <p class="text-uppercase">Tagliere di formaggi</p> 
+                    <p class="text-uppercase">Grigliata di carne</p> 
+                    <p class="cs_description">(braciole, hamburger, salsiccia e arrosticini)</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">15</p>
+                    <p class="cs_text_red cs_price cs_font_2">36</p>
                 </div>
             </div>
         </div>
@@ -431,7 +446,7 @@
                         <p class="cs_text_grey cs_font_2">33 cl</p>
                     </div>
                     <div class="col-3 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">4</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">5</p>
                     </div>
                     <div class="col-6">
                         <p>Tennent's</p>
@@ -440,7 +455,7 @@
                         <p class="cs_text_grey cs_font_2">33 cl</p>
                     </div>
                     <div class="col-3 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">4</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">5</p>
                     </div>
                     <div class="col-6">
                         <p>Heineken</p>
@@ -458,7 +473,16 @@
                         <p class="cs_text_grey cs_font_2">33 cl</p>
                     </div>
                     <div class="col-3 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">3</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">3.5</p>
+                    </div>
+                    <div class="col-6">
+                        <p>Birra dello stretto non filtrata</p>
+                    </div>
+                    <div class="col-3 text-end align-self-end">
+                        <p class="cs_text_grey cs_font_2">33 cl</p>
+                    </div>
+                    <div class="col-3 text-end align-self-end">
+                        <p class="cs_price cs_font_2 cs_text_grey">4</p>
                     </div>
                 </div>
             </div>
@@ -584,12 +608,6 @@
                         <p class="cs_price cs_font_2 cs_text_grey">20</p>
                     </div>
                     <div class="col-6">
-                        <p>Valdobbiadene Prosecco Superiore</p>
-                    </div>
-                    <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">22</p>
-                    </div>
-                    <div class="col-6">
                         <p>Naonis Prosecco</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
@@ -599,19 +617,13 @@
                         <p>Berlucchi - Franciacorta</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">30</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">35</p>
                     </div>
                     <div class="col-6">
                         <p>Champagne Mo&euml;t</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
                         <p class="cs_price cs_font_2 cs_text_grey">100</p>
-                    </div>
-                    <div class="col-6">
-                        <p>Champagne Mumm</p>
-                    </div>
-                    <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">90</p>
                     </div>
                     <div class="col-6">
                         <p>Champagne Piper Heidsieck </p>
@@ -691,6 +703,9 @@
                     </div>
                     <div class="col-12">
                         <p>Brockmans</p>
+                    </div>
+                    <div class="col-12">
+                        <p>... e tanto ancora</p>
                     </div>
                 </div>
             </div>
