--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h1 class="text-uppercase cs_text_red mb-3">Starters</h1>
             <div class="row g-2">
                 <div class="col-10">
-                    <p>Arrosticini (5pz)</p> 
+                    <p>Arrosticini* (5pz)</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">6</p>
@@ -87,19 +87,19 @@
                     <p class="cs_text_red cs_price cs_font_2">5</p>
                 </div>
                 <div class="col-10">
-                    <p>Patate Fritte</p> 
+                    <p>Patate Fritte*</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">3.50</p>
                 </div>
                 <div class="col-10">
-                    <p>Misto Fritto</p> 
+                    <p>Misto Fritto*</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">6</p>
                 </div>
                 <div class="col-10">
-                    <p class="m-0">Fritto premium</p> 
+                    <p class="m-0">Fritto premium*</p> 
                     <p class="cs_description">(mozzarelle in carrozza, arancinetti, calzoncini, mozzarelline panate, olive ascolane)</p>
                 </div>
                 <div class="col-2 text-end align-self-end">
@@ -358,7 +358,7 @@
                     <p class="cs_text_red cs_price cs_font_2">20</p>
                 </div>
                 <div class="col-10">
-                    <p class="text-uppercase">Aperifish</p> 
+                    <p class="text-uppercase">Aperifish*</p> 
                     <p class="cs_description">(anelli di calamari, franceschini, latterino, gamberi)</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
@@ -366,7 +366,7 @@
                 </div>
                 <div class="col-10">
                     <p class="text-uppercase">Grigliata di carne</p> 
-                    <p class="cs_description">(braciole, hamburger, salsiccia e arrosticini)</p> 
+                    <p class="cs_description">(braciole, hamburger, salsiccia e arrosticini*)</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">36</p>
@@ -721,6 +721,7 @@
             <p>Some of the dishes and foods served in this place may contain substances that cause allergies or intolerances.</p>
             <p class="mt-3">Per tutelare la freschezza degli alimenti e garanzia igienica, alcuni alimenti sono stati bonificati con tecnica di abbattimento rapido di temperatura e decongelamento secondo reg. CE 853/04</p>
             <p class="mt-3">In order to preserve the freshness and hygienic safety of food some ingredients have been cooled down and defrosted according to the CE regulation 853/04</p>
+            <p>*prodotti surgelati</p>
         </div>
     </section>
 
