--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
             <p>Some of the dishes and foods served in this place may contain substances that cause allergies or intolerances.</p>
             <p class="mt-3">Per tutelare la freschezza degli alimenti e garanzia igienica, alcuni alimenti sono stati bonificati con tecnica di abbattimento rapido di temperatura e decongelamento secondo reg. CE 853/04</p>
             <p class="mt-3">In order to preserve the freshness and hygienic safety of food some ingredients have been cooled down and defrosted according to the CE regulation 853/04</p>
-            <p>*prodotti surgelati</p>
+            <p class="cs_description">*prodotti surgelati</p>
         </div>
     </section>
 
