--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <p>Patate con pistacchio e guanciale</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">5</p>
+                    <p class="cs_text_red cs_price cs_font_2">6</p>
                 </div>
                 <div class="col-10">
                     <p>Patate Fritte*</p> 
@@ -109,26 +109,25 @@
                     <p>Panelle e crocch&eacute;</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">5</p>
+                    <p class="cs_text_red cs_price cs_font_2">6</p>
                 </div>
                 <div class="col-10">
                     <p>Tuma fritta</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">5</p>
+                    <p class="cs_text_red cs_price cs_font_2">6</p>
+                </div>
+                <div class="col-10">
+                    <p>Nuggets (6pz)</p> 
+                </div>
+                <div class="col-2 text-end align-self-end">
+                    <p class="cs_text_red cs_price cs_font_2">6</p>
                 </div>
                 <div class="col-10">
                     <p>Bruschette miste</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">6</p>
-                </div>
-                <div class="col-10">
-                    <p>Ravioloni fritti melanzana e burrata</p> 
-                    <p class="cs_description">(con mousse al parmigiano)</p>
-                </div>
-                <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">10</p>
                 </div>
             </div>
         </div>
@@ -163,7 +162,7 @@
                     <p class="cs_text_grey cs_price cs_font_2">10</p>
                 </div>
                 <div class="col-10">
-                    <p>Grano antico</p> 
+                    <p>Piccantella</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_grey cs_price cs_font_2">10</p>
@@ -223,6 +222,13 @@
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_grey cs_price cs_font_2">12</p>
                 </div>
+                <div class="col-10">
+                    <p>Stinco di maiale</p> 
+                    <p class="cs_description">(con patate al forno)</p>
+                </div>
+                <div class="col-2 text-end align-self-end">
+                    <p class="cs_text_grey cs_price cs_font_2">18</p>
+                </div>
             </div>
         </div>
     </section>
@@ -250,13 +256,19 @@
                     <p class="cs_text_red cs_price cs_font_2">12</p>
                 </div>
                 <div class="col-10">
+                    <p>Gnocchi gorgonzola e speck</p> 
+                </div>
+                    <div class="col-2 text-end align-self-end">
+                    <p class="cs_text_red cs_price cs_font_2">12</p>
+                </div>
+                <div class="col-10">
                    <p>Paccheri rucola, gamberi e arancia</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">15</p>
                 </div>
                 <div class="col-10">
-                    <p>Ravioloni burrata e nduja</p> 
+                    <p>Spaghetti burrata, nduja e pomodorini</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">12</p>
@@ -266,12 +278,6 @@
                 </div>
                 <div class="col-2 text-end align-self-end">
                     <p class="cs_text_red cs_price cs_font_2">15</p>
-                </div>
-                <div class="col-10">
-                    <p>Spaghetti con ricci</p> 
-                </div>
-                <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">20</p>
                 </div>
             </div>
         </div>
@@ -285,19 +291,19 @@
                     <p>Pistacchio, burrata e mortadella</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_grey cs_price cs_font_2">10</p>
+                    <p class="cs_text_grey cs_price cs_font_2">12</p>
                 </div>
                 <div class="col-10">
                     <p>Funghi freschi, burrata, rucola, pomodorini e noci</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_grey cs_price cs_font_2">10</p>
+                    <p class="cs_text_grey cs_price cs_font_2">12</p>
                 </div>
                 <div class="col-10">
                     <p>Tuma, scarola, pomodoro e acciughe</p> 
                 </div>
                 <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_grey cs_price cs_font_2">10</p>
+                    <p class="cs_text_grey cs_price cs_font_2">12</p>
                 </div>
             </div>
         </div>
@@ -307,12 +313,6 @@
         <div class="container">
             <h1 class="text-uppercase cs_text_red mb-3">Percorsi</h1>
             <div class="row g-2">
-                <div class="col-10">
-                    <p>Degustazione braciole</p>
-                </div>
-                <div class="col-2 text-end align-self-end">
-                    <p class="cs_text_red cs_price cs_font_2">24</p>
-                </div>
                 <div class="col-10">
                     <p class="m-0">Medici</p> 
                     <p class="cs_description">(tre spiedini)</p>
@@ -408,7 +408,7 @@
                         <p>Chinotto</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">2</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">2.50</p>
                     </div>
                     <div class="col-6">
                         <p>Schweppes</p>
@@ -420,7 +420,7 @@
                         <p>Red Bull</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">3</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">3.50</p>
                     </div>
                 </div>
             </div>
@@ -464,7 +464,7 @@
                         <p class="cs_text_grey cs_font_2">33 cl</p>
                     </div>
                     <div class="col-3 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">3</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">3.50</p>
                     </div>
                     <div class="col-6">
                         <p>Birra dello stretto</p>
@@ -510,28 +510,10 @@
                         <p>Distelh&auml;user Pils</p>
                     </div>
                     <div class="col-3 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">3.50</p>
-                    </div>
-                    <div class="col-3 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">6</p>
-                    </div>
-                    <div class="col-6">
-                        <p>Distelh&auml;user Landbier</p>
-                    </div>
-                    <div class="col-3 text-end align-self-end">
                         <p class="cs_price cs_font_2 cs_text_grey">4</p>
                     </div>
                     <div class="col-3 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">7</p>
-                    </div>
-                    <div class="col-6">
-                        <p>Bi-weizen</p>
-                    </div>
-                    <div class="col-3 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">4</p>
-                    </div>
-                    <div class="col-3 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">7</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">6.50</p>
                     </div>
                 </div>
             </div>
@@ -581,28 +563,34 @@
                         <p>Grillo</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">17</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">18</p>
                     </div>
                     <div class="col-6">
                         <p>Nerello Mascalese</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">17</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">18</p>
                     </div>
                     <div class="col-6">
                         <p>Nero d'Avola</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
-                        <p class="cs_price cs_font_2 cs_text_grey">17</p>
+                        <p class="cs_price cs_font_2 cs_text_grey">18</p>
                     </div>
                     <div class="col-6">
-                        <p>Neromosso</p>
+                        <p>Syrah</p>
+                    </div>
+                    <div class="col-6 text-end align-self-end">
+                        <p class="cs_price cs_font_2 cs_text_grey">18</p>
+                    </div>
+                    <div class="col-6">
+                        <p>Scialii</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
                         <p class="cs_price cs_font_2 cs_text_grey">20</p>
                     </div>
                     <div class="col-6">
-                        <p>Grillo Peloro Casematte</p>
+                        <p>Secca del capo</p>
                     </div>
                     <div class="col-6 text-end align-self-end">
                         <p class="cs_price cs_font_2 cs_text_grey">20</p>
