--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         </div>
     </section>
     
-    <div id="drink">
+    <div id="drink" class="mt-4">
         <section id="bevande">
             <div class="container">
                 <h1 class="text-uppercase cs_text_red mb-3">Bevande</h1>
